# recommender

./: .env.example  .gitignore  .gitmodules  Cargo.toml  build.rs  recommender.sublime-workspace
src/: main.rs
src/config/: database.rs  mod.rs  redis.rs  server.rs
src/database/: csv.rs  mod.rs
src/models/: alert.rs  contents.rs  mod.rs  rating.rs  recommender.rs  user.rs
src/recommender/: collaborative_filtering.rs  content_based.rs  mod.rs  top_n.rs
src/redis/: alerts.rs  mod.rs  users.rs
src/resources/errors/: mod.rs
src/services/: mod.rs
src/services/database/: mod.rs
src/services/database/alerts/: mod.rs
src/services/database/users/: mod.rs
src/services/recommender/: mod.rs
src/services/recommender/collaborative_filtering/: mod.rs
src/services/recommender/content_based/: mod.rs
src/services/recommender/top_n/: mod.rs
src/services/types/: mod.rs
src/services/types/alerts/: mod.rs
src/services/types/ratings/: mod.rs
src/services/types/users/: contents.rs  mod.rs  ratings.rs
