[package]
name = "recommender"
version = "0.1.0"
authors = ["ogoes <otavio@ogoes.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.49"
csv = "1.1.6"
futures = "0.3.14"
serde = { version = "1.0.125", features = ["derive"] }
tokio = { version = "1.5.0", features = ["rt-multi-thread", "macros"] }
