[package]
name = "recommender"
version = "0.1.0"
authors = ["ogoes <otavio@ogoes.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
async-std = "1.9.0"
async-trait = "0.1.49"
csv = "1.1.6"
futures = "0.3.14"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.5.0", features = ["rt-multi-thread", "macros"] }


[features]
http = []