[package]
name = "recommender"
version = "0.1.0"
authors = ["ogoes <otavio@ogoes.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
async-trait = "0.1.49"
config = "0.11.0"
csv = "1.1.6"
dotenv = "0.15.0"
futures = "0.3.14"
prost = "0.7.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_derive = "1.0.126"
tokio = { version = "1.5.0", features = ["rt-multi-thread", "macros"] }
tonic = "0.4.3"


[build-dependencies]
tonic-build = "0.4.2"
